Alguns teste para fazer parte de cadastramento

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="caixa flex">
             <div class="item demo titulo">Login</div>
             <div class="item demo dados"> 
-                <div>
+                <div id="firstDiv">
                     <input id="email" type="email" placeholder="email.." autofocus>
                 </div>
                 <div>
@@ -21,6 +21,9 @@
             </div>
             <div class="item demo entrar">
                 <button class="demo">Entrar</button>
+            </div>
+            <div class="item demo">
+                <button class="demo registrar">Registrar</button>
             </div>
         </div>
     </div>
