--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <button class="demo">Entrar</button>
             </div>
             <div class="item demo">
-                <button class="demo registrar">Registrar</button>
+                <button id="entrar" class="demo registrar">Registrar</button>
             </div>
         </div>
     </div>
